src/assets/css/index.css
@import "tailwindcss/components";
@import "components.css";

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: 'GT Super Display';
    font-style: normal;
    font-weight: 400;
    src: url('./../fonts/gt-super-display/GT-Super-Display-Regular.woff2') format('woff2'), url('./../fonts/gt-super-display/GT-Super-Display-Regular.woff') format('woff');
  }

  @font-face {
    font-family: 'GT Super Display';
    font-style: italic;
    font-weight: 400;
    src: url('./../fonts/gt-super-display/GT-Super-Display-Regular-Italic.woff2') format('woff2'), url('./../fonts/gt-super-display/GT-Super-Display-Regular-Italic.woff') format('woff');
  }
  @font-face {
    font-family: 'Suisse Intl';
    font-style: normal;
    font-weight: 400;
    src: url('./../fonts/suisse-intl/SuisseIntl-Regular-WebS.woff2') format('woff2'), url('./../fonts/suisse-intl/SuisseIntl-Regular-WebS.woff') format('woff');
  }

  @font-face {
    font-family: 'Suisse Intl';
    font-style: italic;
    font-weight: 400;
    src: url('./../fonts/suisse-intl/SuisseIntl-Regular-WebS.woff2') format('woff2'), url('./../fonts/suisse-intl/SuisseIntl-Regular-WebS.woff') format('woff');
  }
  @font-face {
    font-family: 'Suisse Intl';
    font-style: normal;
    font-weight: 600;
    src: url('./../fonts/suisse-intl/SuisseIntl-SemiBold-WebS.woff2') format('woff2'), url('./../fonts/suisse-intl/SuisseIntl-SemiBold-WebS.woff') format('woff');
  }

  @font-face {
    font-family: 'Suisse Intl';
    font-style: italic;
    font-weight: 600;
    src: url('./../fonts/suisse-intl/SuisseIntl-SemiBoldItalic-WebS.woff2') format('woff2'), url('./../fonts/suisse-intl/SuisseIntl-SemiBoldItalic-WebS.woff') format('woff');
  }
  @font-face {
    font-family: 'Suisse Intl';
    font-style: normal;
    font-weight: 700;
    src: url('./../fonts/suisse-intl/SuisseIntl-Bold-WebS.woff2') format('woff2'), url('./../fonts/suisse-intl/SuisseIntl-Bold-WebS.woff') format('woff');
  }

  @font-face {
    font-family: 'Suisse Intl';
    font-style: italic;
    font-weight: 700;
    src: url('./../fonts/suisse-intl/SuisseIntl-BoldItalic-WebS.woff2') format('woff2'), url('./../fonts/suisse-intl/SuisseIntl-BoldItalic-WebS.woff') format('woff');
  }

  @font-face {
    font-family: 'Roboto Mono';
    font-style: normal;
    font-weight: 400;
    src: url('./../fonts/roboto-mono/RobotoMono-Regular.woff2') format('woff2'), url('./../fonts/roboto-mono/RobotoMono-Regular.woff') format('woff');
  }

  @font-face {
    font-family: 'Roboto Mono';
    font-style: italic;
    font-weight: 400;
    src: url('./../fonts/roboto-mono/RobotoMono-Italic.woff2') format('woff2'), url('./../fonts/roboto-mono/RobotoMono-Italic.woff') format('woff');
  }

  @font-face {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 400;
    src: url('./../fonts/ibm-plex-sans/IBMPlexSans-Regular.woff2') format('woff2'), url('./../fonts/ibm-plex-sans/IBMPlexSans-Regular.woff') format('woff');
  }

  @font-face {
    font-family: 'IBM Plex Sans';
    font-style: normal;
    font-weight: 500;
    src: url('./../fonts/ibm-plex-sans/IBMPlexSans-Medium.woff2') format('woff2'), url('./../fonts/ibm-plex-sans/IBMPlexSans-Medium.woff') format('woff');
  }

  body {
    @apply font-secondary;
    background-color: #F1F5F9;
    min-height: 100dvh;
  }
}

@layer utilities {
  .fade-enter {
    @apply opacity-0;
    position: absolute;
  }
  .fade-enter-active {
    @apply transition-opacity duration-300 opacity-100;
    position: absolute;
  }

  .fade-exit {
    @apply opacity-100;
    position: absolute;
  }
  .fade-exit-active {
    @apply transition-opacity duration-200 opacity-0;
    position: absolute;
  }

  /* Visually hidden class for SEO content */
  .vh {
    position: absolute;
    left: -9999px;
    top: auto;
    width: 1px;
    height: 1px;
    overflow: hidden;
  }
}

